tests/semantic/pass/function_pointer_is_callable.c
int main(void) {
  int (**ptr)(void);
  (*ptr)();
}
