tests/semantic/fail/fancy_label.c
int main(void) {
  goto 1;
1: return 0;
}
